k8s/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: car-collection-app-service
spec:
  selector:
    app: car-collection-app
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
  type: NodePort
